--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            <h1>Public demonstrations</h1>
            <p>...more...</p>
            <figure>
-                <img srs="img/doghappy.png" alt="Happy dog" width="100" height="125">
+                <img src="img/doghappy.png" alt="Happy dog" width="100" height="125">
                 <img src="img/dogpaws.png" alt="Dog paws" width="100" height="125">
                 <img src="img/dogwalk.png" alt="Walking a dog" width="100" height="125"
                 <br>
